--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">Kilo Counter</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_diary">DiaryActivity</string>
+    <string name="title_activity_diary">Diary</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="title_activity_overview">OverviewActivity</string>
+    <string name="title_activity_overview">Overview</string>
+    <string name="measure_unit"> kJ</string>
+    <string name="exeDeetsHeader"><u>Exercise</u></string>
+    <string name="foodDeetsHeading"><u>Food</u></string>
 </resources>
